--- a/powercord_manifest.json
+++ b/powercord_manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "Zelk",
-    "version": "1.2.2",
+    "name": "Zelk+",
+    "version": "1.3.0",
     "license": "MIT",
-    "theme": "zelk.css",
-    "author": "schnensch",
-    "description": "a smooth theme inspired by zorin"
+    "theme": "zelkplus.css",
+    "author": "BlueSkye",
+    "description": "a smooth theme forked from Zelk"
 }
